--- a/packages/express-backend/package.json
+++ b/packages/express-backend/package.json
@@ -2,7 +2,7 @@
   "name": "express-backend",
   "version": "1.0.0",
   "description": "backend",
-  "type":"module",
+  "type": "module",
   "main": "backend.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
